// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsViewOverlay renders with content open 1`] = `
<React.Fragment>
  <PreviewFeaturesPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={true}
    previewFeatureFlagsHandler={
      {
        "getDisplayableFeatureFlags": null,
      }
    }
  />
  <ScopingPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    inspectActionMessageCreator={
      {
        "changeInspectMode": null,
      }
    }
    isOpen={true}
    scopingActionMessageCreator={
      {
        "addSelector": null,
      }
    }
    scopingSelectorsData={{}}
  />
  <ContentPanel
    content="content/path"
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    isOpen={true}
  />
  <SettingsPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    userConfigStoreState={{}}
  />
</React.Fragment>
`;

exports[`DetailsViewOverlay renders with preview features open 1`] = `
<React.Fragment>
  <PreviewFeaturesPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={true}
    previewFeatureFlagsHandler={
      {
        "getDisplayableFeatureFlags": null,
      }
    }
  />
  <ScopingPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    inspectActionMessageCreator={
      {
        "changeInspectMode": null,
      }
    }
    isOpen={true}
    scopingActionMessageCreator={
      {
        "addSelector": null,
      }
    }
    scopingSelectorsData={{}}
  />
  <ContentPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
  />
  <SettingsPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    userConfigStoreState={{}}
  />
</React.Fragment>
`;

exports[`DetailsViewOverlay renders with scoping open 1`] = `
<React.Fragment>
  <PreviewFeaturesPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={false}
    previewFeatureFlagsHandler={
      {
        "getDisplayableFeatureFlags": null,
      }
    }
  />
  <ScopingPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    inspectActionMessageCreator={
      {
        "changeInspectMode": null,
      }
    }
    isOpen={true}
    scopingActionMessageCreator={
      {
        "addSelector": null,
      }
    }
    scopingSelectorsData={{}}
  />
  <ContentPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
  />
  <SettingsPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    userConfigStoreState={{}}
  />
</React.Fragment>
`;

exports[`DetailsViewOverlay renders with settings false 1`] = `
<React.Fragment>
  <PreviewFeaturesPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={true}
    previewFeatureFlagsHandler={
      {
        "getDisplayableFeatureFlags": null,
      }
    }
  />
  <ScopingPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    inspectActionMessageCreator={
      {
        "changeInspectMode": null,
      }
    }
    isOpen={true}
    scopingActionMessageCreator={
      {
        "addSelector": null,
      }
    }
    scopingSelectorsData={{}}
  />
  <ContentPanel
    content="content/path"
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    isOpen={true}
  />
  <SettingsPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={false}
    userConfigStoreState={{}}
  />
</React.Fragment>
`;

exports[`DetailsViewOverlay renders with settings panel open 1`] = `
<React.Fragment>
  <PreviewFeaturesPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={true}
    previewFeatureFlagsHandler={
      {
        "getDisplayableFeatureFlags": null,
      }
    }
  />
  <ScopingPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    inspectActionMessageCreator={
      {
        "changeInspectMode": null,
      }
    }
    isOpen={true}
    scopingActionMessageCreator={
      {
        "addSelector": null,
      }
    }
    scopingSelectorsData={{}}
  />
  <ContentPanel
    content="content/path"
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    isOpen={true}
  />
  <SettingsPanel
    deps={
      {
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "detailsViewActionMessageCreator": {
          "addFailureInstance": null,
        },
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={true}
    userConfigStoreState={{}}
  />
</React.Fragment>
`;
